--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@number-flow/svelte": "^0.3.9",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^3.3.0"
 	}
