--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@number-flow/svelte": "^0.3.9",
 		"clsx": "^2.1.1",
+		"firebase": "^11.9.1",
 		"tailwind-merge": "^3.3.0"
 	}
 }
