--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
 	},
 	"dependencies": {
 		"@number-flow/svelte": "^0.3.9",
+		"@vercel/analytics": "^1.5.0",
 		"clsx": "^2.1.1",
 		"firebase": "^11.9.1",
 		"tailwind-merge": "^3.3.0"
